Time: 1 ms (86.77%), Space: 43.9 MB (94.17%) - LeetHub